fix errors on mobile version

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 @font-face {
     font-family: Noto Sans SC;
+    font-weight: normal;
     src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Regular.otf);
    }
 @font-face {
+    font-family: Noto Sans SC Bold;
+    src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
+}
+@font-face {
     font-family: Noto Sans SC;
     font-weight: bold;
-    font-weight: 900;
     src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
 }
 @font-face {
@@ -722,6 +726,9 @@ h2{
     margin: 39px 0px 0px 0px;
 }
 @media (min-width: 768px) and (max-width: 999px){
+    * {
+        text-decoration: none!important;    
+    }
     #benefits-to-you #image{
         grid-row: 1;
         grid-column: 1;
